kubernetes/robin/apps/flux-system/flux-instance/app/github/webhooks/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook-receiver
spec:
  parentRefs:
    - name: envoy
      namespace: network
  hostnames:
    - flux-webhook.${CLUSTER_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
